welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:11: error: '<-' expected but ')' found.
for ( dejafait != nbPas ) {
                        ^Program:18: error: illegal start of simple expression
	}
        ^